fix ui flow bug

--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -19,7 +19,7 @@ li {
     background: #2185d0;
     color: #ffffff; }
 
-.description {
+.document-description {
   height: 50px;
   overflow-y: scroll; }
 
