--- a/client/assets/scss/home.scss
+++ b/client/assets/scss/home.scss
@@ -20,9 +20,9 @@
 
 li {
   padding: 15px;
+}
 
-  .active {
-    background: $blue;
-    color: $white;
-  }
+.active-page {
+  background: $blue;
+  color: $white;
 }
