--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -15,11 +15,12 @@
 
 li {
   padding: 15px; }
-  li .active {
-    background: #2185d0;
-    color: #ffffff; }
 
-.description {
+.active-page {
+  background: #2185d0;
+  color: #ffffff; }
+
+.document-description {
   height: 50px;
   overflow-y: scroll; }
 
