--- a/client/assets/scss/_document.scss
+++ b/client/assets/scss/_document.scss
@@ -14,4 +14,12 @@
   .ui.content {
     padding-bottom: 0;
   }
+  .meta {
+    font-family: $indie-flower
+  }
+}
+
+.ui.huge.header {
+  font-family: $baloo-bhaijaan;
+  color: $project-gray;
 }
